--- a/float/css/style.css
+++ b/float/css/style.css
@@ -14,6 +14,14 @@ a{
     color: inherit;
     text-decoration: none;
 }
+h3{
+    text-align: center;
+    margin-bottom: 24px;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 28px;
+    letter-spacing: 0.015em;
+}
 
 .container{
     width: 1200px;
@@ -155,12 +163,13 @@ a{
     color: #878787;
 }
 
-/*description*/
+/*description111*/
 .description{
 
 }
 .gallery{
     padding-top: 0.1px;
+    float: left;
 }
 .gallery ul{
     float: left;
@@ -182,6 +191,326 @@ a{
     margin-left: 191px;
     margin-top: 48px;
 }
+
+.description__text{
+    width: 400px;
+    height: 20px;
+    float: left;
+    margin-left: 95px;
+}
+.stars{
+
+}
+
+.stars li{
+    float: left;
+    width: 18px;
+    height: 18px;
+    background: url("../img/Star1.png") no-repeat center;
+}
+.stars li:last-child{
+    background:  url("../img/Star2.png") no-repeat center;
+}
+
+.description{
+    padding-bottom: 45px;
+}
+
+.description h1{
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 28px;
+    letter-spacing: 0.015em;
+    margin-top: 18px;
+    margin-bottom: 20px;
+}
+.description .light{
+    margin-bottom: 40px;
+    font-weight: 300;
+    font-size: 18px;
+    line-height: 21px;
+    letter-spacing: 0.015em;
+}
+.description .light span{
+    float: left;
+    margin-right: 40px;
+}
+
+.description h2{
+    font-weight: 700;
+    font-size: 30px;
+    line-height: 35px;
+    letter-spacing: 0.015em;
+    margin-bottom: 27px;
+}
+.basket button{
+    background: #FFF;
+    border: 1px solid #000;
+    border-radius: 25px;
+    width: 178px;
+    height: 48px;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 21px;
+    margin-right: 24px;
+    margin-bottom: 27px;
+}
+.basket img:first-of-type{
+    margin-right: 26px;
+}
+.descr_p{
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 19px;
+    letter-spacing: 0.015em;
+    margin-bottom: 18px;
+}
+.size{
+
+}
+.size li{
+    width: 40px;
+    height: 40px;
+    border: 1px solid #C4C4C4;
+    font-weight: 500;
+    font-size: 24px;
+    line-height: 28px;
+    text-align: center;
+    letter-spacing: 0.015em;
+    color: #C4C4C4;
+    padding-top: 6px;
+    float: left;
+    margin-right: 16px;
+    margin-bottom: 36px;
+}
+.size li:last-child{
+    margin-right: 0;
+}
+.size .active{
+    border: 1px solid #000;
+    color: #000;
+}
+.item-logo img{
+    float: left;
+}
+
+.item-logo p{
+    padding-top: 11px;
+    margin-left: 133px;
+}
+
+/*similar__items*/
+.similar__items{
+    padding-top: 40px;
+    padding-bottom: 100px;
+    background: rgba(196, 196, 196, 0.1);
+}
+
+.similar__items ul.item > li{
+    width: 335px;
+    height: 445px;
+    background: #fff;
+    float: left;
+    margin-right: 40px;
+}
+
+.similar__items ul.item > li div:first-child{
+    text-align: right;
+    padding-top: 20px;
+    padding-right: 18px;
+}
+.similar__items ul.item > li div:nth-child(2){
+    text-align: center;
+    margin-top: 10px;
+    margin-bottom: 60px;
+}
+.similar__items h6{
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 19px;
+    letter-spacing: 0.015em;
+    padding-left: 42px;
+    margin-bottom: 17px;
+}
+
+.similar__items .stars{
+    padding-left: 22px;
+    float: left;
+    margin-top: 5px;
+}
+.similar__items h5{
+    float: right;
+    font-weight: 500;
+    font-size: 24px;
+    line-height: 28px;
+    letter-spacing: 0.015em;
+    margin-right: 26px;
+}
+
+.similar__items .item.item__small > li{
+    width: 254px;
+    height: 337px;
+}
+.item.item__small li > div:nth-child(2) img{
+    height: 160px;
+}
+
+.similar__items ul.item.item__small > li div:nth-child(2){
+    margin-bottom: 40px;
+}
+
+.similar__items .item.item__small > li h6{
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 16px;
+    text-align: center;
+    letter-spacing: 0.015em;
+    padding-left: 0;
+}
+.similar__items h4{
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 27px;
+    text-align: center;
+    letter-spacing: 0.015em;
+    margin-top: 88px;
+    margin-bottom: 24px;
+}
+
+/*reviews*/
+.reviews{
+    padding-top: 40px;
+    padding-bottom: 100px;
+}
+.reviews h3{
+    margin-bottom: 95px;
+}
+.reviews h3 span{
+    text-decoration: underline;
+    float: right;
+}
+.single__review{
+    border-bottom: 1px solid #C3C3C3;
+    padding-bottom: 50px;
+    margin-bottom: 32px;
+}
+.single__review .date{
+    float: left;
+    width: 200px;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 16px;
+    color: #727272;
+}
+.review__content{
+    margin-left: 200px;
+    margin-right: 100px;
+}
+.review__content .user__title{
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 21px;
+    letter-spacing: 0.015em;
+    margin-bottom: 24px;
+}
+.review__content .user__content{
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 24px;
+    letter-spacing: 0.01em;
+}
+.single__review .stars{
+    float: right;
+}
+.footer{
+    background: #1B1B1C;
+    padding-top: 48px;
+    padding-bottom: 108px;
+    color: #fff;
+}
+.footer p.title{
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 19px;
+    color: #FFFCFC;
+    margin-bottom: 24px;
+}
+.help{
+    float: left;
+    margin-right: 150px;
+}
+.help li:first-child{
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 19px;
+    color: #FFFCFC;
+    margin-bottom: 24px;
+}
+.help li{
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 16px;
+    color: #C9C7C7;
+    margin-bottom: 15px;
+}
+
+.support{
+    float: left;
+    margin-right: 140px;
+}
+.support p.title + p{
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 233%;
+    color: #C9C7C7;
+    margin-bottom: 3px;
+}
+.footer__social li{
+    float: left;
+    margin-right: 14px;
+    margin-bottom: 73px;
+}
+.support .email{
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 156%;
+}
+.support .email a{
+    color: #2b98f0;
+}
+
+.mobile__device{
+    float: left;
+    margin-right: 132px;
+}
+.mobile__device img:nth-of-type(1){
+    margin-top: 20px;
+    margin-bottom: 18px;
+}
+.mobile__device img:nth-of-type(2){
+    margin-bottom: 36px;
+}
+.mobile__device p:last-child{
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 156%;
+}
+.mobile__device p:last-child a{
+    color: #2b98f0;
+}
+.social__network{
+    float: left;
+}
+.social__network ul{
+    margin-top: 18px;
+}
+.social__network ul li{
+    float: left;
+    margin-right: 18px;
+}
+
+
+
 
 
 
